--- a/apps/vakers/src/app/cart/components/cart-item/cart-item.component.scss
+++ b/apps/vakers/src/app/cart/components/cart-item/cart-item.component.scss
@@ -1,14 +1,16 @@
-.flex-display{
+.flex-display {
   display: flex;
   align-items: center;
 }
 
 .cart_item_container {
-  width: 100%;
+  width: 60%;
   border-radius: 5px;
   background-color: #e6e6e6;
-  margin: 5px 0px;
+  margin: 10px auto;
   font-size: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .img_container {
@@ -24,32 +26,86 @@
 }
 
 .title {
-  width: 280px;
   font-size: 16px;
-  padding-left: 25px;
+  padding: 5px 0px;
 }
 
 .value {
-  width: 180px;
-  padding-right: 30px;
-  justify-content: flex-end;
+  padding: 5px 0px;
 }
 
 .quantity {
-  width: 90px;
-  padding-left: 25px;
+  padding: 5px 0px;
 }
 
-.buttons{
-  width: 40px;
+.buttons {
+  display: flex;
 }
 
 .total {
-  width: 180px;
-  padding-right: 64px;
-  justify-content: flex-end;
+  padding: 5px 0px;
 }
 
-.delete{
+.delete {
   width: 50px;
+}
+
+@media (min-width: 420px) {
+  .flex-display {
+    display: flex;
+    align-items: center;
+  }
+
+  .cart_item_container {
+    width: 100%;
+    border-radius: 5px;
+    background-color: #e6e6e6;
+    margin: 5px 0px;
+    font-size: 16px;
+    flex-direction: row;
+  }
+
+  .img_container {
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    overflow: hidden;
+    margin: 5px;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+
+  .title {
+    width: 280px;
+    font-size: 16px;
+    padding-left: 25px;
+  }
+
+  .value {
+    width: 180px;
+    padding-right: 30px;
+    justify-content: flex-end;
+  }
+
+  .quantity {
+    width: 90px;
+    padding-left: 25px;
+  }
+
+  .buttons {
+    width: 40px;
+    display: block;
+  }
+
+  .total {
+    width: 180px;
+    padding-right: 64px;
+    justify-content: flex-end;
+  }
+
+  .delete {
+    width: 50px;
+  }
 }
