--- a/apps/vakers/src/app/vaki/components/vaki/vaki.component.scss
+++ b/apps/vakers/src/app/vaki/components/vaki/vaki.component.scss
@@ -4,25 +4,27 @@
 
 .vaki_detail_container {
   padding: 0px;
-  display: flex;
-  height: 400px;
+  display: block;
+  height: 700px;
 }
 
 .vaki_detail_image {
-  width: 600px;
-  max-height: 400px;
+  width: 100%;
+  max-height: 250px;
   overflow: hidden;
 
   img {
+    margin-top: -115px;
+    margin-left: -70px;
     object-position: center;
-    object-fit: inherit;
-    width: 100%;
+    object-fit: cover;
+    height: 100%;
   }
 }
 
 .vaki_detail_info {
   padding: 15px;
-  width: 400px;
+  width: 350px;
 }
 
 .vaki_name {
@@ -79,16 +81,13 @@
   margin-right: 110px;
 }
 
-.contribute_container {
-}
-
 .contribute_select_money {
   border: 1px #ccc solid;
   border-radius: 5px;
   padding: 0px 10px;
   height: 40px;
-  width: 80px;
-  margin-right: 15px;
+  width: 60px;
+  margin-right: 10px;
 }
 
 .contribute_amount {
@@ -96,8 +95,8 @@
   border-radius: 5px;
   padding: 0px 10px;
   height: 38px;
-  width: 100px;
-  margin-right: 15px;
+  width: 80px;
+  margin-right: 10px;
 }
 
 .contribute_button {
@@ -128,4 +127,55 @@
   background-color: #fff;
   font-weight: normal;
   color: #ccc;
+}
+
+@media (min-width: 420px) {
+  .vaki_detail_container {
+    padding: 0px;
+    display: flex;
+    height: 400px;
+  }
+
+  .vaki_detail_image {
+    width: 600px;
+    max-height: 400px;
+    overflow: hidden;
+
+    img {
+      margin: 0px;
+      object-position: center;
+      object-fit: inherit;
+      width: 100%;
+    }
+  }
+
+  .vaki_detail_info {
+    padding: 15px;
+    width: 400px;
+    // margin: none;
+  }
+
+  .contribute_select_money {
+    border: 1px #ccc solid;
+    border-radius: 5px;
+    padding: 0px 10px;
+    height: 40px;
+    width: 80px;
+    margin-right: 15px;
+  }
+  
+  .contribute_amount {
+    border: 1px #ccc solid;
+    border-radius: 5px;
+    padding: 0px 10px;
+    height: 38px;
+    width: 100px;
+    margin-right: 15px;
+  }
+  
+  .contribute_button {
+    color: #fff;
+    width: 165px;
+    height: 38px;
+  }
 }
