--- a/apps/vakers/src/app/vaki/containers/rewards/rewards.component.scss
+++ b/apps/vakers/src/app/vaki/containers/rewards/rewards.component.scss
@@ -2,12 +2,28 @@
   font-weight: bold;
   margin-top: 60px;
   margin-bottom: 40px;
+  margin-left: 20px;
 }
 
 .list_container {
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
+@media (min-width: 420px) {
+  .rewards_title {
+    font-weight: bold;
+    margin-top: 60px;
+    margin-bottom: 40px;
+    margin-left: 0px;
+  }
+
+  .list_container {
+    margin-top: 20px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
